--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,15 @@
         android:id="@+id/header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+        <ImageView
+            android:id="@+id/rectangle"
+            android:layout_toLeftOf="@id/search"
+            android:layout_marginLeft="0dp"
+            android:layout_alignParentLeft="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/searchboxx"
+            android:layout_centerInParent="true"/>
 
 
         <EditText
@@ -19,13 +28,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
-            android:layout_marginLeft="10dp"
             android:layout_toLeftOf="@id/search"
             android:hint="Enter your book tag"
             android:maxLines="1"
-            android:background="@android:color/background_dark"
-            android:layout_centerVertical="true"
-            android:layout_marginStart="24dp"
+            android:background="@android:color/transparent"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="35dp"
             android:padding="20dp"
             android:textSize="20dp" />
 
@@ -36,10 +44,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
-            android:textColor="#0074FF"
             android:onClick="searchbutton"
-            android:padding="20dp"
-            android:textSize="20dp" />
+            android:layout_marginTop="34dp"
+            android:padding="20dp" />
 
 
         <ProgressBar
@@ -47,7 +54,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="45dp"
             android:layout_marginRight="20dp"/>
 
     </RelativeLayout>
