--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,11 +16,10 @@
         <ImageView
             android:id="@+id/rectangle"
             android:layout_toLeftOf="@id/search"
-            android:layout_marginLeft="10dp"
             android:layout_alignParentLeft="true"
             android:layout_width="wrap_content"
-            android:layout_height="120dp"
-            android:src="@drawable/searchboxxx"
+            android:layout_height="140dp"
+            android:src="@drawable/circlebox"
             android:layout_centerInParent="true"/>
 
 
@@ -35,7 +34,7 @@
             android:maxLines="1"
             android:background="@android:color/transparent"
             android:layout_marginStart="15dp"
-            android:layout_marginTop="27dp"
+            android:layout_marginTop="43dp"
             android:padding="20dp"
             android:textSize="20dp" />
 
@@ -47,7 +46,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:onClick="searchbutton"
-            android:layout_marginTop="25dp"
+            android:layout_marginTop="40dp"
             android:padding="20dp" />
 
 
@@ -56,7 +55,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
-            android:layout_marginTop="36dp"
+            android:layout_marginTop="50dp"
             android:layout_marginRight="20dp"/>
 
     </RelativeLayout>
@@ -69,12 +68,13 @@
         android:layout_below="@id/header"
         android:dividerHeight="0dp" />
 
-    <TextView
-        android:id="@+id/empty"
-        android:text="Type a keyword to get your book ;)"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true" />
+    <ImageView
+        android:id="@+id/emptyimg"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:src="@drawable/bookfindimg"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"/>
 
 
 
