--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,10 +15,10 @@
 
         <ImageView
             android:id="@+id/rectangle"
-            android:layout_toLeftOf="@id/search"
             android:layout_alignParentLeft="true"
             android:layout_width="wrap_content"
             android:layout_height="140dp"
+            android:layout_marginRight="20dp"
             android:src="@drawable/circlebox"
             android:layout_centerInParent="true"/>
 
@@ -30,33 +30,34 @@
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_toLeftOf="@id/search"
-            android:hint="Enter your book tag"
+            android:hint="Type your book here.."
             android:maxLines="1"
             android:background="@android:color/transparent"
-            android:layout_marginStart="15dp"
-            android:layout_marginTop="43dp"
+            android:layout_marginStart="13dp"
+            android:layout_marginTop="45dp"
             android:padding="20dp"
             android:textSize="20dp" />
 
         <Button
             android:id="@+id/search"
             android:clickable="true"
-            android:background="@drawable/search"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:background="@drawable/gold"
+            android:layout_width="60dp"
+            android:layout_marginRight="30dp"
+            android:layout_height="60dp"
             android:layout_alignParentEnd="true"
             android:onClick="searchbutton"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="50dp"
             android:padding="20dp" />
 
 
         <ProgressBar
             android:id="@+id/loading"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_alignParentEnd="true"
-            android:layout_marginTop="50dp"
-            android:layout_marginRight="20dp"/>
+            android:layout_marginTop="59dp"
+            android:layout_marginRight="43dp"/>
 
     </RelativeLayout>
 
@@ -70,11 +71,20 @@
 
     <ImageView
         android:id="@+id/emptyimg"
-        android:layout_width="300dp"
-        android:layout_height="300dp"
-        android:src="@drawable/bookfindimg"
+        android:layout_width="270dp"
+        android:layout_height="270dp"
+        android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"/>
+        android:src="@drawable/penguin" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Github: Sagar0-0/FindMyBook"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:padding="12dp"
+        android:id="@+id/myname"/>
 
 
 
